client/css/include/top_banner&popup.css
/* .home__top-banner */
.home__top-banner {
  background-color: var(--primary);
  width: 100%;
  height: 50px;
  color: var(--white);
  font-size: 16px;
  font-weight: 200;
  text-align: center;
  line-height: 50px;
  position: fixed;
  top: 0;
}
.home__top-banner a {
  display: inline-block;
  width: var(--container-width);
  height: 100%;
  position: relative;
}
.home__top-banner a span {
  font-weight: 400;
}
.home__top-banner--btn-close {
  content: "";
  position: absolute;
  width: 50px;
  height: 50px;
  background: url(../../assets/sprites.png) no-repeat -174px -216px;
  border: 0;
}

/* 탑배너가 차지하는 공간만큼 헤더가 밑에 위치하도록 */
.home__top-banner + header {
  margin-top: 50px;
}

/* .home__popup */
.home__popup-wrap {
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -255px;
  margin-left: -170px;
}
.home__popup {
  background-color: antiquewhite;
	width: 340px;
  height: 510px;
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.1);
}
.popup--img {
  width: 100%;
  height: 450px;
  background-image: url(../../assets/main/popup_banner.jpg);
  background-size: cover;
}
.popup--btn-area {
  border-radius: 0 0 10px 10px;
  overflow: hidden;
	position: absolute;
	left: 0;
	right: 0;
	bottom: 0;
	height: 60px;
}
.popup--btn-area button {
	width: 50%;
	height: 100%;
  background: var(--white);
  border: 0;
  float: left;
	font-size: var(--text-sm);
	font-weight: 200;
  cursor: pointer;
}
.popup--btn-area button:first-child {
  border-right: 1px solid var(--gray-100);
}

